# fortran_testing_presentation

./: CMakeLists.txt  notes.md
slides/: CMakeLists.txt  slides.html  slides.md
src/: CMakeLists.txt  boost_math.cpp  boost_math.hpp  config.hpp.in  cpp_mutual_information.f90  cuda_mutual_information.cu  cuda_mutual_information.cuh  cuda_mutual_information.f90  cuda_mutual_information_impl.cuh  ksg_error.f90  math_utils.f90  mutual_information.cpp  mutual_information.cu  mutual_information.cuh  mutual_information.f90  mutual_information.hpp  mutual_information_cpp.f90  mutual_information_cuda_impl.cuh
test/: CMakeLists.txt  test_ksg_count.pf  test_mutual_information.pf  test_utils.f90
test/cpp/: CMakeLists.txt  test_ksg_count.cpp
test/fortran/: CMakeLists.txt  test_f90_ksg_count.pf  test_f90_mutual_information.pf  test_ksg_count.pf  test_ksg_counts.pf  test_mutual_information.pf  test_mutual_information_common.pf
test/utils/: CMakeLists.txt  c_test_utils.cpp  test_utils.cpp  test_utils.f90  test_utils.hpp
